log
Thu 28 Sep 2023 01:10:27 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:19: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   39 |   Nuevo->heapArray=(int*) malloc(sizeof(int) * Nuevo->capac);
      |                   ^
cc1: all warnings being treated as errors
Compilation failed
068fd16
Thu 28 Sep 2023 01:12:54 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:20: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   39 |   Nuevo->heapArray = (int*) malloc(sizeof(int) * Nuevo->capac);
      |                    ^
cc1: all warnings being treated as errors
Compilation failed
051fb74
Thu 28 Sep 2023 01:14:00 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
4e1a374
Thu 28 Sep 2023 01:20:45 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:25: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   22 |     return pq->heapArray[0];
      |            ~~~~~~~~~~~~~^~~
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d258ccf
Thu 28 Sep 2023 01:20:58 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
669fa66
